k8s-resources/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec: 
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 250m
              memory: 750Mi
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv

            - mountPath: /provisioning/datasources/influxdb.yml
              name: grafana-provisioning
              subPath: influxdb.yml
              readOnly: true
            - mountPath: /provisioning/dashboards/dashboard.yml
              name: grafana-provisioning
              subPath: dashboard.yml
              readOnly: true
            - mountPath: /provisioning/dashboards/performance-test-dashboard.json
              name: grafana-provisioning
              subPath: performance-test-dashboard.json
              readOnly: true
            - mountPath: /provisioning/dashboards/xk6-output-influxdb-dashboard.json
              name: grafana-provisioning
              subPath: xk6-output-influxdb-dashboard.json
              readOnly: true

      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-provisioning
          configMap:
            name: grafana-provisioning
